[finish]投稿アイテムのedit及びdeleteアクションの制限実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,6 +8,9 @@ ja:
       post:
         title: タイトル
         body: 説明文
+      pc_configuration:
+        title: タイトル
+        body: 説明文
 
     errors:
       messages:
