[finish]ページング機能実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,13 @@
 ---
 ja:
+  views:
+      pagination:
+        first: '<<'
+        last: '>>'
+        previous: '<'
+        next: '>'
+        truncate: '...'
   activerecord:
-
     attributes:
       user:
         name: ユーザーネーム
@@ -11,7 +17,6 @@ ja:
       pc_configuration:
         title: タイトル
         body: 説明文
-
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
